implemented pathfinding and animations

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <script type="text/javascript" src="index.min.js"></script>
 </head>
 <body style="margin:0px;">
-<canvas id="canvas" style="margin-top:100px;border-style:dashed;padding-left: 0;padding-right: 0;margin-left: auto;margin-right: auto;display: block;width: 500px; height:500px;"></>
+<div style="display:none;">
+  <img id="source" src="https://mdn.mozillademos.org/files/5397/rhino.jpg"
+       width="300" height="227">
+</div>
+<canvas id="canvas" width="500" height="500" style="margin-top:100px;border-style:dashed;padding-left: 0;padding-right: 0;margin-left: auto;margin-right: auto;display: block;width: 500px; height:500px;"></>
 </body>
 </html>
